@@ -1,4 +1,8 @@
-﻿shmuel 25.03.2015 16:11:10 +0200 - build 498
+﻿shmuel 26.03.2015 09:34:26 +0200 - build 499
+
+1. Добавлена функция-заглушка NoCommandLine, по аналогии с функциями NoMacro, NoEvent, NoMenuItem.
+
+shmuel 25.03.2015 16:11:10 +0200 - build 498
 
 1. Добавлена возможность загрузки из макрофайлов пользовательских префиксов командной строки.
    Этим занимается новая загрузочная функция 'CommandLine'.
